<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:id="@+id/attackerFragment"
                      android:name="com.emi.nwodcombat.diceroller.mvp.CompositeDiceRollerFragment"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:tag="@string/fragment_attacker"
                      app:layout_behavior="@string/appbar_scrolling_view_behavior"
                      tools:layout="@layout/fragment_dice_roller_composite"
                      app:actorTag="@string/fragment_attacker"/>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:id="@+id/defenderFragment"
                      android:name="com.emi.nwodcombat.diceroller.mvp.CompositeDiceRollerFragment"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:tag="@string/fragment_defender"
                      app:layout_behavior="@string/appbar_scrolling_view_behavior"
                      tools:layout="@layout/fragment_dice_roller_composite"
                      app:actorTag="@string/fragment_defender"/>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/die" />

</android.support.design.widget.CoordinatorLayout>
