...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lblPickDice"
                android:text="Tap here to pick dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/lblSpecialRules"
                android:text="Special rules:"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
...
