<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <com.emi.nwodcombat.widgets.NumberPickerWidget
        android:id="@+id/nbpkAttribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:widgetTitle="@string/nbpk_title_attribute"
        app:maximumValue="10"
        app:minimumValue="1"/>

    <com.emi.nwodcombat.widgets.NumberPickerWidget
        android:id="@+id/nbpkSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:widgetTitle="@string/nbpk_title_skill"
        app:maximumValue="10"
        app:minimumValue="0"/>

    <com.emi.nwodcombat.widgets.NumberPickerWidget
        android:id="@+id/nbpkPotency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:widgetTitle="@string/nbpk_title_potency"
        app:maximumValue="10"
        app:minimumValue="0"/>

    <com.emi.nwodcombat.widgets.NumberPickerWidget
        android:id="@+id/nbpkEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:widgetTitle="@string/nbpk_title_equipment"
        app:maximumValue="10"
        app:minimumValue="0"/>

</LinearLayout>
